--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chubbyts/chubbyts-function-mock",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "A function mock helper.",
   "keywords": [
     "chubbyts",
@@ -44,16 +44,17 @@
   "engines": {
     "node": ">=16"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@chubbyts/chubbyts-eslint": "^1.1.1",
-    "@stryker-mutator/core": "^6.4.2",
-    "@stryker-mutator/jest-runner": "^6.4.2",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.1.3",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "@chubbyts/chubbyts-eslint": "^1.1.2",
+    "@stryker-mutator/core": "^7.1.0",
+    "@stryker-mutator/jest-runner": "^7.1.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.1",
+    "jest": "^29.6.1",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   },
   "publishConfig": {
     "access": "public"
