--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@chubbyts/chubbyts-function-mock",
-  "version": "1.3.6",
+  "type": "module",
+  "version": "1.4.0",
   "description": "A function mock helper.",
   "keywords": [
     "chubbyts",
@@ -11,14 +12,14 @@
   "license": "MIT",
   "repository": "chubbyts/chubbyts-function-mock",
   "scripts": {
+    "build": "rm -rf ./dist && tsc -b ./tsconfig.types.json ./tsconfig.esm.json ./tsconfig.cjs.json && node ./rename-commonjs.js",
     "cs-fix": "prettier --write src tests",
     "cs": "prettier --check src tests",
+    "infection": "stryker run",
     "lint-fix": "eslint src tests --fix",
     "lint": "eslint src tests",
-    "test": "jest",
-    "infection": "stryker run",
-    "build": "rm -Rf dist && tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "jest"
   },
   "jest": {
     "preset": "ts-jest",
@@ -41,12 +42,21 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    "./*": {
+      "types": "./*.d.ts",
+      "require": "./*.cjs",
+      "import": "./*.js",
+      "default": "./*.js"
+    }
+  },
   "engines": {
     "node": ">=16"
   },
   "dependencies": {},
   "devDependencies": {
-    "@chubbyts/chubbyts-eslint": "^1.1.2",
+    "@chubbyts/chubbyts-eslint": "^2.0.2",
+    "@chubbyts/chubbyts-packaging": "^1.0.3",
     "@stryker-mutator/core": "^7.1.0",
     "@stryker-mutator/jest-runner": "^7.1.0",
     "@types/jest": "^29.5.3",
