Use @chubbyts/chubbyts-packaging v2

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chubbyts/chubbyts-function-mock",
   "type": "module",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A function mock helper.",
   "keywords": [
     "chubbyts",
@@ -12,7 +12,7 @@
   "license": "MIT",
   "repository": "chubbyts/chubbyts-function-mock",
   "scripts": {
-    "build": "rm -rf ./dist && tsc -b ./tsconfig.types.json ./tsconfig.esm.json ./tsconfig.cjs.json && node ./rename-commonjs.js",
+    "build": "node ./build.js",
     "cs-fix": "prettier --write src tests",
     "cs": "prettier --check src tests",
     "infection": "stryker run",
@@ -46,8 +46,8 @@
     "./*": {
       "types": "./*.d.ts",
       "require": "./*.cjs",
-      "import": "./*.js",
-      "default": "./*.js"
+      "import": "./*.mjs",
+      "default": "./*.mjs"
     }
   },
   "engines": {
@@ -55,8 +55,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@chubbyts/chubbyts-eslint": "^2.0.2",
-    "@chubbyts/chubbyts-packaging": "^1.0.3",
+    "@chubbyts/chubbyts-eslint": "^2.0.3",
+    "@chubbyts/chubbyts-packaging": "^2.0.3",
     "@stryker-mutator/core": "^7.1.0",
     "@stryker-mutator/jest-runner": "^7.1.0",
     "@types/jest": "^29.5.3",
