--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "@chubbyts/chubbyts-function-mock",
   "type": "module",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "A function mock helper.",
   "keywords": [
     "chubbyts",
     "jest",
-    "mock"
+    "mock",
+    "vitest"
   ],
   "author": "Dominik Zogg",
   "license": "MIT",
   "repository": "chubbyts/chubbyts-function-mock",
   "scripts": {
     "build": "node ./build.js",
-    "cs-fix": "./node_modules/prettier/bin/prettier.cjs --write src tests",
-    "cs": "./node_modules/prettier/bin/prettier.cjs --check src tests",
+    "cs-fix": "prettier --write src tests",
+    "cs": "prettier --check src tests",
     "infection": "stryker run",
     "lint-fix": "eslint src tests --fix",
     "lint": "eslint src tests",
     "prepare": "npm run build",
-    "test": "jest"
+    "test": "vitest"
   },
   "prettier": {
     "printWidth": 120,
@@ -44,16 +45,14 @@
   "dependencies": {},
   "devDependencies": {
     "@chubbyts/chubbyts-eslint": "^2.0.3",
-    "@chubbyts/chubbyts-packaging": "^2.0.6",
+    "@chubbyts/chubbyts-packaging": "^2.0.7",
     "@stryker-mutator/core": "^8.2.6",
-    "@stryker-mutator/jest-runner": "^8.2.6",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "prettier-2": "npm:prettier@^2.8.8",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.3"
+    "@stryker-mutator/vitest-runner": "^8.2.6",
+    "@types/node": "^20.14.5",
+    "@vitest/coverage-v8": "^1.6.0",
+    "prettier": "^3.3.2",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "publishConfig": {
     "access": "public"
