--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chubbyts/chubbyts-function-mock",
   "type": "module",
-  "version": "1.5.2",
+  "version": "2.0.1",
   "description": "A function mock helper.",
   "keywords": [
     "chubbyts",
@@ -13,11 +13,11 @@
   "license": "MIT",
   "repository": "chubbyts/chubbyts-function-mock",
   "scripts": {
-    "build": "node ./build.mjs",
+    "build": "tsc",
     "cs-fix": "prettier --write src tests",
     "cs": "prettier --check src tests",
     "infection": "stryker run",
-    "lint-fix": "eslint src tests eslint.config.mjs vitest.config.ts --fix",
+    "lint-fix": "eslint src tests eslint.config.js vitest.config.ts --fix",
     "lint": "eslint src tests",
     "prepare": "npm run build",
     "test": "vitest"
@@ -34,24 +34,22 @@
   "exports": {
     "./*": {
       "types": "./*.d.ts",
-      "require": "./*.cjs",
-      "import": "./*.mjs",
-      "default": "./*.mjs"
+      "import": "./*.js",
+      "default": "./*.js"
     }
   },
   "engines": {
     "node": ">=18"
   },
   "devDependencies": {
-    "@chubbyts/chubbyts-eslint": "^3.0.3",
-    "@chubbyts/chubbyts-packaging": "^4.0.0",
-    "@stryker-mutator/core": "^8.7.1",
-    "@stryker-mutator/vitest-runner": "^8.7.1",
-    "@types/node": "^22.10.3",
-    "@vitest/coverage-v8": "^2.1.8",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "@chubbyts/chubbyts-eslint": "^4.0.2",
+    "@stryker-mutator/core": "^9.0.1",
+    "@stryker-mutator/vitest-runner": "^9.0.1",
+    "@types/node": "^24.0.1",
+    "@vitest/coverage-v8": "^3.2.3",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.3"
   },
   "publishConfig": {
     "access": "public"
